--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
+  
   <string name="pref_plugin_telephony">Telefon-Benachrichtigung</string>
   <string name="pref_plugin_telephony_desc">Benachrichtigungen über SMS und Anrufe senden</string>
   <string name="pref_plugin_battery">Akkubericht</string>
@@ -8,10 +9,12 @@
   <string name="pref_plugin_sftp_desc">Erlaubt das Browsen des Dateisystems auf dem entfernten Handy</string>
   <string name="pref_plugin_clipboard">Abgleich der Zwischenablage</string>
   <string name="pref_plugin_clipboard_desc">Inhalt der Zwischenablage freigeben</string>
+  <string name="pref_plugin_mousepad">Ferneingabe</string>
   <string name="pref_plugin_mousepad_desc">Verwendet Ihr Handy als Maus und Tastatur</string>
   <string name="pref_plugin_mpris">Multimedia-Bedienung</string>
   <string name="pref_plugin_mpris_desc">Audio und Video mit Ihrem Telefon steuern</string>
   <string name="pref_plugin_runcommand">Befehl ausführen</string>
+  <string name="pref_plugin_runcommand_desc">Führt einen Befehl aus</string>
   <string name="pref_plugin_ping">Ping</string>
   <string name="pref_plugin_ping_desc">Senden und Empfangen von Pings</string>
   <string name="pref_plugin_notifications">Benachrichtigungs-Abgleich</string>
@@ -26,6 +29,10 @@
   <string name="no_permissions">Sie müssen die Erlaubnis zum Zugriff auf Benachrichtigungen erteilen</string>
   <string name="send_ping">Ping senden</string>
   <string name="open_mpris_controls">Multimedia-Bedienung</string>
+  <string name="open_mousepad">Ferneingabe</string>
+  <string name="mousepad_info">Finger auf dem Bildschirm bewegen zum steuern des Mauszeigers. Tippen für klicken, mit 2/3 Fingern tippen für rechte oder mittlere Maustaste. Lang gedrückt halten für drag\'n drop.</string>
+  <string name="mousepad_double_tap_settings_title">2 Finger tippen Aktion setzen</string>
+  <string name="mousepad_triple_tap_settings_title">3 Finger tippen Aktion setzen</string> 
   <string-array name="mousepad_tap_entries">
     <item>Rechtsklick</item>
     <item>Mittelklick</item>
@@ -36,7 +43,7 @@
   <string name="category_connected_devices">Verbundene Geräte</string>
   <string name="category_not_paired_devices">Verfügbare Gerät</string>
   <string name="category_remembered_devices">Gemerkte Geräte</string>
-  <string name="plugins_failed_to_load">Laden der Module fehlgeschlagen, tippen Sie für weitere Details:</string>
+  <string name="plugins_failed_to_load">Laden der Module fehlgeschlagen, tippen für weitere Details:</string>
   <string name="device_menu_plugins">Modul-Einstellungen</string>
   <string name="device_menu_unpair">Verbindung trennen</string>
   <string name="device_not_reachable">Das angegeben Gerät ist nicht erreichbar</string>
@@ -52,12 +59,14 @@
   <string name="pair_requested">Verbindung angefordert</string>
   <string name="pairing_request_from">Verbindungsanfrage von %1s</string>
   <string name="received_url_title">Verknüpfung von %1s erhalten</string>
+  <string name="received_url_text">Antippen zum öffnen \'%1s\'</string>
   <string name="incoming_file_title">Eingehende Datei von %1s</string>
   <string name="incoming_file_text">%1s</string>
   <string name="outgoing_file_title">Datei wird an %1s gesendet</string>
   <string name="outgoing_file_text">%1s</string>
   <string name="received_file_title">Datei von %1s erhalten</string>
   <string name="received_file_fail_title">Der Empfang der Datei %1s ist fehlgeschlagen</string>
+  <string name="received_file_text">Antippen zum öffnen \'%1s\'</string>
   <string name="sent_file_title">Datei an %1s gesendet</string>
   <string name="sent_file_text">%1s</string>
   <string name="sent_file_failed_title">Das Senden der Datei an %1s ist fehlgeschlagen</string>
@@ -82,6 +91,8 @@
   <string name="mpris_next">Weiter</string>
   <string name="mpris_volume">Lautstärke</string>
   <string name="mpris_settings">Multimedia-Einstellungen</string>
+  <string name="mpris_time_settings_title">Vorwärts/zurück Knöpfe</string>
+  <string name="mpris_time_settings_summary">Zeit einstellen die vorwärts/rückwärts gesprungen werden soll beim antippen.</string>
   <string-array name="mpris_time_entries">
     <item>10 Sekunden</item>
     <item>20 Sekunden</item>
@@ -100,7 +111,10 @@
   <string name="invalid_device_name">Ungültiger Gerätename</string>
   <string name="shareplugin_text_saved">Text empfangen und in der Zwischenablage gespeichert</string>
   <string name="custom_devices_settings">Benutzerdefinierte Geräteliste</string>
+  <string name="pair_device_action">Neues Gerät verbinden</string>
+  <string name="unpair_device_action">Verbindung mit %s trennen</string>
   <string name="custom_device_list">Geräte nach IP hinzufügen</string>
+  <string name="share_notification_preference">Benachrichtigung</string>
   <string name="share_notification_preference_summary">Beim Empfang einer Datei vibrieren und einen Sound abspielen</string>
   <string name="title_activity_notification_filter">Benachrichtigungs-Filter</string>
   <string name="filter_apps_info">Benachrichtigungen werden zwischen den ausgewählten Anwendungen abgeglichen.</string>
@@ -113,5 +127,24 @@
   <string name="add_host">Rechner/IP hinzufügen</string>
   <string name="add_host_hint">Rechnername oder IP</string>
   <string name="no_players_connected">Keine Medienspieler gefunden</string>
+  <string name="custom_dev_list_help">Diese Option nur benutzen wenn das Gerät nicht automatisch erkannt wurde.
   <string name="mpris_player_on_device">%1$s auf %2$s</string>
+  <string name="send_files">Sende Dateien</string>
+  <string name="pairing_title">KDE Connect Geräte</string>
+  <string name="pairing_description">Andere Geräte auf denen KDE Connect im selben Netzwerk läuft sollten hier angezeigt werden.</string>
+  <string name="device_paired">Gerät gespeichert</string>
+  <string name="device_rename_title">Gerät umbenennen</string>
+  <string name="device_rename_confirm">Umbenennen</string>
+  <string name="refresh">Aktualisieren</string>
+  <string name="unreachable_description">Das gespeicherte Gerät ist nicht erreichbar. Bitte übprüfen ob es zum selben Netzwerk verbunden ist.</string>
+  <string name="no_file_browser">Es ist kein Dateimanager installiert.</string>
+  <string name="pref_plugin_telepathy">SMS senden</string>
+  <string name="pref_plugin_telepathy_desc">SMS vom Desktop PC aus versenden</string>
+  <string name="plugin_not_supported">Das Modul wird von diesem Gerät nicht unterstützt</string>
+  <string name="findmyphone_title">Finde mein Telefon</string>
+  <string name="findmyphone_description">Lässt das Telefon zum wiederfinden klingeln.</string>
+  <string name="findmyphone_found">Gefunden</string>
+  <string name="open">Öffnen</string>
+  <string name="close">Schliessen</string>
+  
 </resources>
